--- a/checkCSV/checkCSV.csproj
+++ b/checkCSV/checkCSV.csproj
@@ -48,7 +48,8 @@
   <ItemGroup>
     <Compile Include="csvFileReader.cs" />
     <Compile Include="directoryImport.cs" />
-    <Compile Include="defaults.cs" />
+    <Compile Include="defaultSettings.cs" />
+    <Compile Include="elementData.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
