--- a/checkCSV/checkCSV.csproj
+++ b/checkCSV/checkCSV.csproj
@@ -46,10 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ElementDataBuilder.cs" />
     <Compile Include="csvFileReader.cs" />
     <Compile Include="directoryImport.cs" />
     <Compile Include="defaultSettings.cs" />
-    <Compile Include="elementData.cs" />
+    <Compile Include="ElementData.cs" />
+    <Compile Include="ElementDataGroup.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
