--- a/checkGA/checkGA.csproj
+++ b/checkGA/checkGA.csproj
@@ -46,14 +46,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="ABI.cs" />
+    <Compile Include="csvFileReader.cs" />
+    <Compile Include="DirectoryImport.cs" />
+    <Compile Include="GA_DataGroup.cs" />
+    <Compile Include="Form_checkGA.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form_checkGA.Designer.cs">
+      <DependentUpon>Form_checkGA.cs</DependentUpon>
     </Compile>
+    <Compile Include="GA_Data.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form_checkGA.resx">
+      <DependentUpon>Form_checkGA.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
