--- a/checkGA/checkGA.csproj
+++ b/checkGA/checkGA.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.Excel">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\TeklaStructuresLearning\21.1\nt\bin\plugins\Interop.Excel.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Tekla Structures\2016\nt\bin\plugins\Interop.Excel.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
